test/types/enum/enumCantOverloadOps.good
enumCantOverloadOps.chpl:3: error: Can't override '=' for enums
enumCantOverloadOps.chpl:7: error: Can't override '==' for enums
enumCantOverloadOps.chpl:11: error: Can't override '!=' for enums
